[package]
name = "rainout"
version = "0.0.0"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["audio", "midi", "device", "hardware"]
categories = ["multimedia::audio"]
description = "Cross-platform audio and MIDI IO (placeholder)"
documentation = "https://docs.rs/rainout"
repository = "https://github.com/RustyDAW/rainout"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]