[package]
name = "advanced_settings_gui_demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-daw-io = { path = "../../" }
eframe = "0.16"
simple_logger = "2.1"
ringbuf = "0.2.5"